PoC Grouping of Data Nodes in Delta Report
WIP PoC to group data nodes in delta report based on the parent-child
relationship.
Currently each data node is added as a unique entity in the delta report
making the delta report lengthy and repetitive. This can simplified to
have a concise and simpler delta report.
